MINOR: Replace Collections factory methods with Java 11+ equivalents in clients consumer, producer and admin
Signed-off-by: see-quick <maros.orsak159@gmail.com>