@@ -20,7 +20,6 @@ package org.apache.kafka.clients.admin;
 import org.apache.kafka.common.annotation.InterfaceAudience;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -42,7 +41,7 @@ public class RemoveMembersFromConsumerGroupOptions extends AbstractOptions<Remov
     }
 
     public RemoveMembersFromConsumerGroupOptions() {
-        this.members = Collections.emptySet();
+        this.members = Set.of();
     }
 
     /**
